[package]
name = "dirtcrunch"
authors = ["Tejas Sanap<sanap.tejas@gmail.com>"]
version = "0.1.0"
edition = "2021"

# Always sort dependencies alphabetically.
[dependencies]
async-trait = "0.1.42"
futures = "0.3.17"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
shiplift = "0.7.0"
tokio = { version = "1.12.0", features = ["io-util", "fs", "macros"] }
