[package]
name = "dirtcrunch"
authors = ["Tejas Sanap<sanap.tejas@gmail.com>"]
version = "0.1.0"
edition = "2021"

# Always sort dependencies alphabetically.
[dependencies]
async-trait = "0.1.42"
futures = "0.3.17"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
shiplift = "0.7.0"
tokio = { version = "1.12.0", features = [ "io-util", "fs", "macros"] }
tokio-util = { version = "0.6.8", features = ["io"] }
anyhow = "1.0.44"
bytes = "1.1.0"
